--- a/doc/news.txt
+++ b/doc/news.txt
@@ -77,3 +77,17 @@ changed defaults for vfplot
 fixed a bug in loadvfcsv
 
 added an example. Subject 1021
+
+v0.2-3 08/15/2012
+amended function bebie
+
+improved functions vflayout_poplr, vflplot_poplr, vfplotloc so that they now admit several versions to mark "clinical significance" and "statistical significance"
+
+added two functions that make operations on vf-objects: vfsort, and vfselectvisit
+
+added another function that creates legend for rings, ringmapgraph
+
+v0.2-4 08/17/2012
+finished documentation
+
+added a "expected number of years blind" in PoPLR analysis
