--- a/doc/news.txt
+++ b/doc/news.txt
@@ -87,7 +87,19 @@ added two functions that make operations on vf-objects: vfsort, and vfselectvisi
 
 added another function that creates legend for rings, ringmapgraph
 
-v0.2-4 08/17/2012
+v0.2-4 09/16/2012
 finished documentation
 
 added a "expected number of years blind" in PoPLR analysis
+
+v0.2-5 10/08/2012
+fixed bug in vflayout_legoplots
+
+v0.2-6 10/17/2012
+fixed bug in vlplotloc
+
+v0.2-7 11/11/2012
+In plots of visual sensitivities show <0 for negative values and a couple of patches
+
+v0.2-8 11/13/2012
+removed reliable controls from the normative values. Added option to capitalize tags or not in xmlblock and xlmitem functions.
