--- a/doc/news.txt
+++ b/doc/news.txt
@@ -120,3 +120,9 @@ added 10-2 Wyatt, et al control data
 
 generated 10-2 normative values from the control data
 changed name standard for some datasets
+
+v0.2-13 01/21/2013
+delete old documenation files
+
+v0.2-14 02/24/2013
+fix problem with change in dependent package flip
