--- a/inst/news.txt
+++ b/inst/news.txt
@@ -163,4 +163,10 @@ v0.3-4 03/10/2013
 fixing new problem with quartz and windows, all calls to open a new window are now made with "dev.new".
 
 v0.3-5 09/10/2013
-removed opening new windows in examples, as not allowed in the new R-devel version 2013-10-08 r64038.
+removed opening new windows in examples, as not allowed in the new R-devel version 2013-10-08 r64038
+
+v0.3-6 20/12/2013
+fixed vfdemographics follow up time
+
+v0.4 22/02/2014
+inclusion of the novel GHr estimator for general height
